@@ -7,6 +7,7 @@ const siteSchema = new mongoose.Schema({
     siteName: {
         type: String,
         required: true,
+        lowercase: true,
         validate(value) {
             if (value.length < 2) {
                 console.error(`Site Name is too short`);
@@ -22,22 +23,28 @@ const siteSchema = new mongoose.Schema({
     description: {
         type: String,
         required: false,
-        default: "Site description"
+        lowercase: true,
+        default: "site description",
     },
     type: {
         type: String,
         required: false,
+        lowercase: true,
         default: 'HQ'
     },
     department: {
         type: String,
         required: false,
+        lowercase: true,
         default: 'IT'
     },
     floor: {
         type: String,
+        lowercase: true,
         required: false
     }
+}, {
+    timestamps: true
 });
 
 
