@@ -48,6 +48,8 @@ const orgSchema = new mongoose.Schema({
             }
         }
     ]
+}, {
+    timestamps: true
 });
 
 
