@@ -38,6 +38,8 @@ const siteSchema = new mongoose.Schema({
         type: String,
         required: false
     }
+}, {
+    timestamps: true
 });
 
 
